Fix overflow-x issue

--- a/frontend-app/src/index.css
+++ b/frontend-app/src/index.css
@@ -6,7 +6,8 @@ body,
 .app,
 .content {
   height: 100%;
-  width: 100%;
+  width: 100%;  
+  overflow-x: hidden;
   font-family: "Source Sans Pro", sans-serif;
 }
 
